[package]
name = "otp"
description = "A simple command line HOTP and TOTP generator"
version = "0.1.0"
authors = ["acheronfail <acheronfail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
ascii = "1.0"
atty = "0.2.14"
clap = { version = "3.0.0-beta.2" }
data-encoding = "2.1.2"
err-derive = "0.2.1"
ring = "0.16.9"
