[package]
name = "rotp"
license = "Unlicense OR MIT OR Apache-2.0"
homepage = "https://github.com/acheronfail/rotp"
repository = "https://github.com/acheronfail/rotp"
description = "A simple command line HOTP and TOTP generator"
version = "0.2.1"
authors = ["Callum Oz <acheronfail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
ascii = "1.1.0"
atty = "0.2.14"
clap = { version = "4.4.11", features = ["cargo", "derive"] }
data-encoding = "2.5.0"
err-derive = "0.3.1"
ring = "0.17.7"
